Fix: errores tipo graficos cambio: de URL a URI