@@ -7,7 +7,9 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+
 
 @Service
 public class ConexionApiImpl implements ConexionApi {
@@ -17,12 +19,12 @@ public class ConexionApiImpl implements ConexionApi {
      * @param nombre Busca el pokemon que le digas para buscarlo en pokeapi
      */
     @Override
-    public String getPokeJson(String nombre) throws IOException {
+    public String getPokeJson(String nombre) throws IOException, URISyntaxException {
         String url = "https://pokeapi.co/api/v2/pokemon/";
         url = url + nombre;
-        URL urlPokemon = new URL(url);
+        URI urlPokemon = new URI(url);
 
-        HttpURLConnection connection = (HttpURLConnection) urlPokemon.openConnection();
+        HttpURLConnection connection = (HttpURLConnection) urlPokemon.toURL().openConnection();
         connection.setRequestMethod("GET");
 
         int responseCode = connection.getResponseCode();
@@ -40,7 +42,7 @@ public class ConexionApiImpl implements ConexionApi {
             reader.close();
             return response.toString();
         } else {
-            throw new RuntimeException("Error de connexion con la api Codigo: " + responseCode);
+            throw new RuntimeException("Error de connexion con la api Código: " + responseCode);
         }
     }
 }
